P5 Glove/include/P5DLLc.h

/*////////////////////////////////////////////////////////////////////////////////////
 P5Data
 This is the original data structure that all the glove's information was stored in.
 It is missing a lot of information, so two new data structures were created also.
 The new data structures should be used instead of this one most of the time.
 This one is mostly for backwards compatibility
////////////////////////////////////////////////////////////////////////////////////*/

typedef struct
{
	/*
      Actual P5 variables
    */
	char VendorID[50], ProductID[50], Version[50];
	char ProductString[255], ManufacturerString[255], SerialNumString[255];

	int m_nDeviceID;
	int m_nMajorRevisionNumber, m_nMinorRevisionNumber;

	int m_nGloveType;

	float m_fx, m_fy, m_fz;					/* x,y,z of the hand */
	float m_fyaw, m_fpitch, m_froll;		/* yaw\pitch\roll of the hand */
	unsigned char m_byBendSensor_Data[5];	/* All the bend sensor data */
	unsigned char m_byButtons[4];			/* P5 Button data */
	float m_fRotMat[3][3];				    /* matrix for inverse kinematics */

/*
   The fields below only exist in special debug versions of the DLL file.
   But don't worry, the same information is available in the new P5State structure.

   for distribution delete these lines
*/
#ifdef P5DLL_DEBUG
	float VisLedPos[4][3];		/* X\Y\Z of visible LEDs */
	float m_fV1Angle[4], m_fV2Angle[4], m_fHAngle[4];	/* Angle of entry of visible LEDs */
	unsigned char m_byLEDNum[4];						/* Visible LEDs */
	int m_nlastBrightLED[4];
	unsigned char m_RawDistalSensor_Data[5];
	unsigned int LED0[3], LED1[3], LED2[3], LED3[3];
	float ActualLED_X[10];
	float ActualLED_Y[10];
	float ActualLED_Z[10];
#endif

}P5Data;
typedef struct {
/* Location */
	float x, y, z;				/* x,y,z of the hand */
	float RelativeX, RelativeY, RelativeZ;
	float RelativeAvgX, RelativeAvgY, RelativeAvgZ;
    float FilterPos[3];

    float Velocity[3];
    float Acceleration[3];

/* Rotation    */
    float RotMat[3][3]; /* rotation matrix [row][column] like Direct3D, premultiply by row vector */
	float pitch, yaw, roll;
    float FilterRotMat[3][3];
	float FilterPitch, FilterYaw, FilterRoll;
    float AngularVelocity[3]; /* around the x, y, and z axes */
    float AngularAcceleration[3];

/* Visibility */
    int Visible;

	
/* Fingers */
	unsigned char finger[5];	/* All the bend sensor data */
    short FingerAbsolute[5];
    float FingerVelocity[5];
    float FingerAcceleration[5];

/* Buttons */
	unsigned char button[4];	/*P5 Button data*/

/* Leds */
	float LedPos[10][3];		   /* Position of 10 LEDs */
    float LedVelocity[10][3];      /* Velocity of 10 LEDs */
    float LedGeometricAccuracy[10];/* Dot product of vectors to other LEDs */
    unsigned char LedVisible[10];  /* 1 if visible, 0 if not */
    int TrackedLed;
     
/* Visible Leds */
    int VisibleLedCount;
	signed char VisibleLedNumber[4];  /* Which of the 10 LEDs is each visible one */
	int VisibleLedRaw[4][3]; /* Raw Led values -512 to +511 */
	float VisibleLedV1Angle[4], VisibleLedV2Angle[4], VisibleLedHAngle[4];  /*Angle of entry of visible LEDs*/
    float VisibleLedPos[4][3]; /* debug */
    

/* Time */
	double TimeStamp;
    float FrameRate;
    long long Frame;


} P5State;
typedef struct {
	char VendorID[52], ProductID[52], Version[52];
	char ProductString[256], ManufacturerString[256], SerialNumString[256];
	int DeviceID;
	int MajorRevisionNumber, MinorRevisionNumber;
	int GloveType;

	/* Physical Led Layout */
	float ActualLedPos[10][3];
	float LEDDistances[10][10];

	/* Global tan compensation data */
	float Head1_VAngle, Head_HAngle, Head2_VAngle, Head2_HAngle;
	float HeadSeparation;

    /* AC Adaptrer Status */
    P5BOOL ACAdapterStatus;

    /* Finger Calibration */
    int FingerStraight[5];
    int FingerBent[5];

	/* Handles */
	void  *DeviceHandle; /* PHID_DEVICE */

	unsigned int ThreadId;
	unsigned int ThreadHandle;
	P5BOOL ThreadStatus;

} P5Info;
/* Init function - required on start of program */
P5DLL_API P5BOOL __stdcall P5_Init(void);
P5DLL_API void __stdcall P5_Close();
P5DLL_API int __stdcall P5_GetCount();
P5DLL_API P5Data * __stdcall P5_GetDataPointer(int P5Id);
P5DLL_API P5State * __stdcall P5_GetStatePointer(int P5Id);
P5DLL_API P5Info * __stdcall P5_GetInfoPointer(int P5Id);
P5DLL_API void __stdcall P5_SaveBendSensors(int P5Id);
P5DLL_API void __stdcall P5_CalibrateBendSensors(int P5Id);
P5DLL_API void __stdcall P5_CalibratePositionData(int P5Id);
P5DLL_API void __stdcall P5_SetClickSensitivity(int P5Id, unsigned char leftvalue, unsigned char rightvalue, unsigned char middlevalue);
P5DLL_API void __stdcall P5_GetClickSensitivity(int P5Id, int *leftclick, int *rightclick, int *middleclick);
P5DLL_API P5BOOL __stdcall P5_GetMouseState(int P5Id);
P5DLL_API void __stdcall P5_SetMouseState(int P5Id, P5BOOL state);
P5DLL_API void __stdcall P5_SetMouseStickTime(int P5Id, unsigned char time);
P5DLL_API int __stdcall P5_GetMouseStickTime(int P5Id);
P5DLL_API void __stdcall P5_GetMouseButtonAllocation(int P5Id, int *leftclick, int *rightclick, int *middleclick);
P5DLL_API void __stdcall P5_SetMouseButtonAllocation(int P5Id, int leftclickfinger, int rightclickfinger, int middleclickfinger);
P5DLL_API P5BOOL __stdcall P5_GetLastError(int *P5Id, int *ErrorCode);
    /* AC Adaptor */
P5DLL_API P5BOOL __stdcall P5_GetACAdaptorStatus(int P5Id);
    /* Bend Sensors */
P5DLL_API void __stdcall P5_GetBendCalibration(int P5Id, int *ThumbStraight, int *ThumbBent,
                             int *IndexStraight, int *IndexBent,
                             int *MiddleStraight, int *MiddleBent,
                             int *RingStraight, int *RingBent,
                             int *PinkyStraight, int *PinkyBent);
P5DLL_API void __stdcall P5_GetRawFingerBends(int P5Id, int *thumb, int *index, int *middle, int *ring, int *pinky);
P5DLL_API void __stdcall P5_GetCalibrationData(int P5Id, unsigned char data[]);
    /* Space Warp */
P5DLL_API void __stdcall P5_SetUnits(float units);
P5DLL_API void __stdcall P5_SetForwardZ(int z);
P5DLL_API void __stdcall P5_SetTowerPos(int P5Id, float x, float y, float z);
P5DLL_API void __stdcall P5_SetTowerRotMat(int P5Id, float RotMat[][3]);
P5DLL_API void __stdcall P5_TiltTowerForward(int P5Id, float degrees);
P5DLL_API void __stdcall P5_SpinTowerRight(int P5Id, float degrees);
P5DLL_API void __stdcall P5_TiltTowerRight(int P5Id, float degrees);
    /* Glove configuration */
P5DLL_API void __stdcall P5_SetLedPos(int P5Id, int led, float x, float y, float z);
P5DLL_API void __stdcall P5_SetGlovePos(int P5Id, float x, float y, float z);
P5DLL_API void __stdcall P5_SetGloveRotMat(int P5Id, float RotMat[][3]);
P5DLL_API void __stdcall P5_PitchGlove(int P5Id, float theta);
P5DLL_API void __stdcall P5_YawGlove(int P5Id, float theta);
P5DLL_API void __stdcall P5_RollGlove(int P5Id, float theta);
    /* Filters */
P5DLL_API void __stdcall P5_SetInterfaceMode(int mode);
P5DLL_API void __stdcall P5_SetFilterMode(int filters);
P5DLL_API void __stdcall P5_SetFilterAmount(int ExtraFrames, float DeadDistance);
P5DLL_API void __stdcall P5_ClearArchive(int P5Id);
P5DLL_API void __stdcall P5_SetRequiredAccuracy(float accuracy);
    /* Mouse */
P5DLL_API void __stdcall P5_RestoreMouse(int P5Id);
P5DLL_API void __stdcall P5_UnRestoreMouse(int P5Id);
    /* Low level hardware control */
P5DLL_API void __stdcall P5_SetFeature(int P5Id, unsigned char usage, unsigned char numvalues, unsigned char *reportdata);
P5DLL_API void __stdcall P5_SetFeatureReport(int P5Id, unsigned char report, unsigned char numvalues, unsigned char *reportdata);
P5DLL_API int __stdcall P5_GetFeature(int P5Id, unsigned char usage, unsigned char numvalues, unsigned char *reportdata);
P5DLL_API int __stdcall P5_GetFeatureReport(int P5Id, unsigned char report, unsigned char numvalues, unsigned char *reportdata);