P5 Glove/include/P5DLL.pas


procedure P5_SetFeature(P5Id: Integer; usage: Byte; numvalues: Byte;  out reportdata); StdCall; external 'P5DLL.DLL';
procedure P5_SetFeatureReport(P5Id: Integer; report: Byte; numvalues: Byte; out reportdata); StdCall; external 'P5DLL.DLL';
function P5_GetFeature(P5Id: Integer; usage: Byte; numvalues: Byte; var reportdata): Integer; StdCall; external 'P5DLL.DLL';
function P5_GetFeatureReport(P5Id: Integer; report: Byte; numvalues: Byte; var reportdata): Integer; StdCall; external 'P5DLL.DLL';
procedure P5_SetForwardZ(z: Integer); StdCall; external 'P5DLL.DLL';

    // Glove configuration
procedure P5_SetLedPos(P5Id: Integer; led: Integer; x, y, z: Single); StdCall; external 'P5DLL.DLL';
procedure P5_SetGlovePos(P5Id: Integer; x, y, z: Single); StdCall; external 'P5DLL.DLL';
procedure P5_SetGloveRotMat(P5Id: Integer; Var RotMat: TRotMat); StdCall; external 'P5DLL.DLL';
procedure P5_PitchGlove(P5Id: Integer; theta: Single); StdCall; external 'P5DLL.DLL';
procedure P5_YawGlove(P5Id: Integer; theta: Single); StdCall; external 'P5DLL.DLL';
procedure P5_RollGlove(P5Id: Integer; theta: Single); StdCall; external 'P5DLL.DLL';

    // Mouse
procedure P5_RestoreMouse(P5Id: Integer = -1); StdCall; external 'P5DLL.DLL';
procedure P5_UnRestoreMouse(P5Id: Integer = -1); StdCall; external 'P5DLL.DLL';


/////////////////////////////////////////////////////////////////////////////////////
// CP5DLL
// This is the original C++ class that represents all the P5 Gloves on your system.
// You just create one of these objects at the start of your C++ program,
// then call the P5_Init() method. The object will then automatically update its
// fields and structure arrays until you call the P5_Close() method.
//
// This class is missing a lot of important functionality, and is limited to Visual C++
// You are better off using the C style functions.
// This is mostly just for backwards compatibility.
/////////////////////////////////////////////////////////////////////////////////////
Type
  CP5DLL = Class
  private
    function GetP5Device(P5Id: Integer): PP5Data;
  public
    m_nNumP5: Integer;
    property m_P5Devices[P5Id: Integer]: PP5Data read GetP5Device;

    //Constructors and destructors
    Constructor Create();
    Destructor Destroy; override;

    //Close function
    procedure P5_Close; virtual;
    //Init function - required on start of program
    function P5_Init: Boolean; virtual;

    procedure P5_SetClickSensitivity(P5Id: Integer; leftvalue, rightvalue, middlevalue: Byte); virtual;
    procedure P5_GetClickSensitivity(P5Id: Integer; out leftclick, rightclick, middleclick: Integer); virtual;

    procedure P5_SaveBendSensors(P5Id: Integer = -1); virtual;
    procedure P5_CalibrateBendSensors(P5Id: Integer = -1); virtual;
    procedure P5_CalibratePositionData(P5Id: Integer = -1); virtual;

    function P5_GetMouseState(P5Id: Integer = 0): Boolean; virtual;
    procedure P5_SetMouseState(P5Id: Integer; state: Boolean); virtual;
    procedure P5_SetMouseStickTime(P5Id: Integer; time: Byte); virtual;
    function P5_GetMouseStickTime(P5Id: Integer = 0): Integer; virtual;
    procedure P5_GetMouseButtonAllocation(P5Id: Integer; out leftclick, rightclick, middleclick: Integer); virtual;
    procedure P5_SetMouseButtonAllocation(P5Id: Integer; leftclickfinger, rightclickfinger, middleclickfinger: Integer); virtual;

    function P5_GetLastError(out P5Id: Integer; out ErrorCode: Integer): Boolean; virtual;

  end;

  CP5DLL2 = Class(CP5DLL)
  private
    function GetP5State(P5Id: Integer; frame: Integer = 0): PP5State;
    function GetP5Info(P5Id: Integer): PP5Info;
  public
    property State[P5Id: Integer; frame: Integer = 0]: PP5State read GetP5State; default;
    property Info[P5Id: Integer]: PP5Info read GetP5Info;

    // AC Adaptor
    function P5_GetACAdaptorStatus(P5Id: Integer = 0): Boolean; virtual;

    // Bend Sensors
    procedure P5_GetBendCalibration(P5Id: Integer; out ThumbStraight, ThumbBent, IndexStraight, IndexBent, MiddleStraight, MiddleBent, RingStraight, RingBent, PinkyStraight, PinkyBent: Integer); virtual;
    procedure P5_GetRawFingerBends(P5Id: Integer; out thumb, index, middle, ring, pinky: Integer); virtual;
    procedure P5_GetCalibrationData(P5Id: Integer; out data); virtual;

    // Space Warp
    procedure P5_SetUnits(units: Single = 1.0); virtual;
    procedure P5_SetForwardZ(z: Integer); virtual;

    procedure P5_SetTowerPos(P5Id: Integer; x,y,z: Single); virtual;
    procedure P5_SetTowerRotMat(P5Id: Integer; var RotMat: TRotMat); virtual;
    procedure P5_TiltTowerForward(P5Id: Integer; degrees: Single); virtual;
    procedure P5_SpinTowerRight(P5Id: Integer; degrees: Single); virtual;
    procedure P5_TiltTowerRight(P5Id: Integer; degrees: Single); virtual;

    // Glove configuration
    procedure P5_SetLedPos(P5Id: Integer; led: Integer; x, y, z: Single); virtual;
    procedure P5_SetGlovePos(P5Id: Integer; x, y, z: Single); virtual;
    procedure P5_SetGloveRotMat(P5Id: Integer; Var RotMat: TRotMat); virtual;
    procedure P5_PitchGlove(P5Id: Integer; theta: Single); virtual;
    procedure P5_YawGlove(P5Id: Integer; theta: Single); virtual;
    procedure P5_RollGlove(P5Id: Integer; theta: Single); virtual;

    // Filters
    procedure P5_SetInterfaceMode(mode: Integer); virtual;
    procedure P5_SetFilterMode(filters: Integer); virtual;
    procedure P5_SetFilterAmount(ExtraFrames: Integer; DeadDistance: Single); virtual;
    procedure P5_ClearArchive(P5Id: Integer); virtual;
    procedure P5_SetRequiredAccuracy(accuracy: Single); virtual;

    // Mouse
    procedure P5_RestoreMouse(P5Id: Integer = -1); virtual;
    procedure P5_UnRestoreMouse(P5Id: Integer = -1); virtual;

    // Low level hardware control
    procedure P5_SetFeature(P5Id: Integer; usage: Byte; numvalues: Byte;  out reportdata); virtual;
    procedure P5_SetFeatureReport(P5Id: Integer; report: Byte; numvalues: Byte; out reportdata); virtual;
    function P5_GetFeature(P5Id: Integer; usage: Byte; numvalues: Byte; var reportdata): Integer; virtual;
    function P5_GetFeatureReport(P5Id: Integer; report: Byte; numvalues: Byte; var reportdata): Integer; virtual;

  end;

implementation

{ CP5DLL }

constructor CP5DLL.Create;
begin
  m_nNumP5 := 0;
end;

destructor CP5DLL.Destroy;
begin

  inherited;
end;

procedure CP5DLL.P5_CalibrateBendSensors(P5Id: Integer);
begin
  P5DLL.P5_CalibrateBendSensors(P5Id);
end;

procedure CP5DLL.P5_CalibratePositionData(P5Id: Integer);
begin
  P5DLL.P5_CalibratePositionData(P5Id);
end;

procedure CP5DLL.P5_Close;
begin
  P5DLL.P5_Close;
end;

procedure CP5DLL.P5_GetClickSensitivity(P5Id: Integer; out leftclick,
  rightclick, middleclick: Integer);
begin
  P5DLL.P5_GetClickSensitivity(P5Id, leftclick, rightclick, middleclick);
end;

function CP5DLL.P5_GetLastError(out P5Id, ErrorCode: Integer): Boolean;
begin
  Result:=P5DLL.P5_GetLastError(P5Id, ErrorCode);
end;

procedure CP5DLL.P5_GetMouseButtonAllocation(P5Id: Integer; out leftclick,
  rightclick, middleclick: Integer);
begin
  P5DLL.P5_GetMouseButtonAllocation(P5Id, leftclick, rightclick, middleclick);
end;

function CP5DLL.P5_GetMouseState(P5Id: Integer): Boolean;
begin
  Result:=P5DLL.P5_GetMouseState(P5Id);
end;

function CP5DLL.P5_GetMouseStickTime(P5Id: Integer): Integer;
begin
  Result:=P5DLL.P5_GetMouseStickTime(P5Id);
end;

function CP5DLL.P5_Init: Boolean;
begin
  Result:=P5DLL.P5_Init;
  m_nNumP5:=P5_GetCount;
end;

procedure CP5DLL.P5_SaveBendSensors(P5Id: Integer);
begin
  P5DLL.P5_SaveBendSensors(P5Id);
end;

procedure CP5DLL.P5_SetClickSensitivity(P5Id: Integer; leftvalue,
  rightvalue, middlevalue: Byte);
begin
  P5DLL.P5_SetClickSensitivity(P5Id, leftvalue, rightvalue, middlevalue);
end;

procedure CP5DLL.P5_SetMouseButtonAllocation(P5Id, leftclickfinger,
  rightclickfinger, middleclickfinger: Integer);
begin
  P5DLL.P5_SetMouseButtonAllocation(P5Id, leftclickfinger, rightclickfinger, middleclickfinger);
end;

procedure CP5DLL.P5_SetMouseState(P5Id: Integer; state: Boolean);
begin
  P5DLL.P5_SetMouseState(P5Id, state);
end;

procedure CP5DLL.P5_SetMouseStickTime(P5Id: Integer; time: Byte);
begin
  P5DLL.P5_SetMouseStickTime(P5Id, time);
end;

function CP5DLL.GetP5Device(P5Id: Integer): PP5Data;
begin
  Result:=P5DLL.P5_GetDataPointer(P5Id);
end;



{ CP5DLL2 }

function CP5DLL2.GetP5Info(P5Id: Integer): PP5Info;
begin
  Result:=P5DLL.P5_GetInfoPointer(P5Id);
end;

function CP5DLL2.GetP5State(P5Id: Integer; frame: Integer = 0): PP5State;
begin
  Result:=P5DLL.P5_GetStatePointer(P5Id);
end;

function CP5DLL2.P5_GetACAdaptorStatus(P5Id: Integer): Boolean;
begin
  Result:=P5DLL.P5_GetACAdaptorStatus(P5Id);
end;

procedure CP5DLL2.P5_GetBendCalibration(P5Id: Integer; out ThumbStraight,
  ThumbBent, IndexStraight, IndexBent, MiddleStraight, MiddleBent,
  RingStraight, RingBent, PinkyStraight, PinkyBent: Integer);
begin
  P5DLL.P5_GetBendCalibration(P5Id, ThumbStraight, ThumbBent, IndexStraight, IndexBent,
  MiddleStraight, MiddleBent, RingStraight, RingBent, PinkyStraight, PinkyBent);
end;

procedure CP5DLL2.P5_GetCalibrationData(P5Id: Integer; out data);
begin
  P5DLL.P5_GetCalibrationData(P5Id, data);
end;

function CP5DLL2.P5_GetFeature(P5Id: Integer; usage, numvalues: Byte;
  var reportdata): Integer;
begin
  Result:=P5DLL.P5_GetFeature(P5Id, usage, numvalues, reportdata);
end;

function CP5DLL2.P5_GetFeatureReport(P5Id: Integer; report,
  numvalues: Byte; var reportdata): Integer;
begin
  Result:=P5DLL.P5_GetFeatureReport(P5Id, report, numvalues, reportdata);
end;

procedure CP5DLL2.P5_GetRawFingerBends(P5Id: Integer; out thumb, index,
  middle, ring, pinky: Integer);
begin
  P5DLL.P5_GetRawFingerBends(P5Id, thumb, index, middle, ring, pinky);
end;

procedure CP5DLL2.P5_SetFeature(P5Id: Integer; usage, numvalues: Byte;
  out reportdata);
begin
  P5DLL.P5_SetFeature(P5Id, usage, numvalues, reportdata);
end;

procedure CP5DLL2.P5_SetFeatureReport(P5Id: Integer; report,
  numvalues: Byte; out reportdata);
begin
  P5DLL.P5_SetFeatureReport(P5Id, report, numvalues, reportdata);
end;

procedure CP5DLL2.P5_SetFilterAmount(ExtraFrames: Integer;
  DeadDistance: Single);
begin
  P5DLL.P5_SetFilterAmount(ExtraFrames, DeadDistance);
end;

procedure CP5DLL2.P5_SetFilterMode(filters: Integer);
begin
  P5DLL.P5_SetFilterMode(filters);
end;

procedure CP5DLL2.P5_SetForwardZ(z: Integer);
begin
  P5DLL.P5_SetForwardZ(z);
end;

procedure CP5DLL2.P5_SetRequiredAccuracy(accuracy: Single);
begin
  P5DLL.P5_SetRequiredAccuracy(accuracy);
end;

procedure CP5DLL2.P5_SetTowerPos(P5Id: Integer; x, y, z: Single);
begin
  P5DLL.P5_SetTowerPos(P5Id, x,y,z);
end;

procedure CP5DLL2.P5_SetTowerRotMat(P5Id: Integer; var RotMat: TRotMat);
begin
  P5DLL.P5_SetTowerRotMat(P5Id, RotMat);
end;

procedure CP5DLL2.P5_SetUnits(units: Single);
begin
  P5DLL.P5_SetUnits(units);
end;

procedure CP5DLL2.P5_SpinTowerRight(P5Id: Integer; degrees: Single);
begin
  P5DLL.P5_SpinTowerRight(P5Id, degrees);
end;

procedure CP5DLL2.P5_TiltTowerForward(P5Id: Integer; degrees: Single);
begin
  P5DLL.P5_TiltTowerForward(P5Id, degrees);
end;

procedure CP5DLL2.P5_TiltTowerRight(P5Id: Integer; degrees: Single);
begin
  P5DLL.P5_TiltTowerRight(P5Id, degrees);
end;

// Mouse
procedure CP5DLL2.P5_RestoreMouse(P5Id: Integer = -1);
begin
  P5DLL.P5_RestoreMouse(P5Id);
end;

procedure CP5DLL2.P5_UnRestoreMouse(P5Id: Integer = -1);
begin
  P5DLL.P5_UnRestoreMouse(P5Id);
end;

procedure CP5DLL2.P5_SetInterfaceMode(mode: Integer);
begin
  P5DLL.P5_SetInterfaceMode(mode);
end;

procedure CP5DLL2.P5_SetLedPos(P5Id: Integer; led: Integer; x, y, z: Single);
begin
  P5DLL.P5_SetLedPos(P5Id, led, x, y, z);
end;

procedure CP5DLL2.P5_SetGlovePos(P5Id: Integer; x, y, z: Single);
begin
  P5DLL.P5_SetGlovePos(P5Id, x, y, z);
end;

procedure CP5DLL2.P5_SetGloveRotMat(P5Id: Integer; Var RotMat: TRotMat);
begin
  P5DLL.P5_SetGloveRotMat(P5Id, RotMat);
end;
